# RAG_Help_Bot_Example

./: .gitignore  README.md  baza-znanii-ecvi.txt  build_vectorstore.py  pyproject.toml  rag_service.py  rate_limiter.py  requirements.txt  telegram_bot.py  user_context.py
vectorstore/baza-znanii-ecvi_faiss_index/: index.faiss  index.pkl
